<resources>

    <string name="app_name">My Family Tree</string>

    <string name="action_settings">Settings</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="apply">Apply</string>
    <string name="back">Back</string>
    <string name="camera">Camera</string>
    <string name="cre_rs_filter_name_ad1920">1920</string>
    <string name="cre_rs_filter_name_ancient">Ancient</string>
    <string name="cre_rs_filter_name_bleached">Bleached</string>
    <string name="cre_rs_filter_name_bleachedblue">Bleached Blue</string>
    <string name="cre_rs_filter_name_blues">Blues</string>
    <string name="cre_rs_filter_name_blueshadows">Blue Shadows</string>
    <string name="cre_rs_filter_name_breeze">Breeze</string>
    <string name="cre_rs_filter_name_bw">B&amp;W</string>
    <string name="cre_rs_filter_name_celsius">Celsius</string>
    <string name="cre_rs_filter_name_chest">Chest</string>
    <string name="cre_rs_filter_name_classic">Classic</string>
    <string name="cre_rs_filter_name_colorful">Gysmo</string>
    <string name="cre_rs_filter_name_cool">Cool</string>
    <string name="cre_rs_filter_name_cottoncandy">Cotton Candy</string>
    <string name="cre_rs_filter_name_creamy">Creamy</string>
    <string name="cre_rs_filter_name_default">NONE</string>
    <string name="cre_rs_filter_name_eighties">Eighties</string>
    <string name="cre_rs_filter_name_elder">Elder</string>
    <string name="cre_rs_filter_name_evening">Evening</string>
    <string name="cre_rs_filter_name_fall">Fall</string>
    <string name="cre_rs_filter_name_fixie">Fixie</string>
    <string name="cre_rs_filter_name_food">Food</string>
    <string name="cre_rs_filter_name_fridge">Fridge</string>
    <string name="cre_rs_filter_name_front">Front</string>
    <string name="cre_rs_filter_name_glam">Glam</string>
    <string name="cre_rs_filter_name_gobblin">Gobblin</string>
    <string name="cre_rs_filter_name_highcarb">High Carp</string>
    <string name="cre_rs_filter_name_highcontrast">High Contrast</string>
    <string name="cre_rs_filter_name_identity">Identiy</string>
    <string name="cre_rs_filter_name_k1">K1</string>
    <string name="cre_rs_filter_name_k2">K2</string>
    <string name="cre_rs_filter_name_k6">K6</string>
    <string name="cre_rs_filter_name_kdynamic">K Dynamic</string>
    <string name="cre_rs_filter_name_keen">Keen</string>
    <string name="cre_rs_filter_name_lenin">Lenin</string>
    <string name="cre_rs_filter_name_litho">Litho</string>
    <string name="cre_rs_filter_name_lomo">Lomo</string>
    <string name="cre_rs_filter_name_lomo100">Lomo 100</string>
    <string name="cre_rs_filter_name_lucid">Lucid</string>
    <string name="cre_rs_filter_name_mellow">Mellow</string>
    <string name="cre_rs_filter_name_neat">Neat</string>
    <string name="cre_rs_filter_name_nogreen">No Green</string>
    <string name="cre_rs_filter_name_orchid">Orchid</string>
    <string name="cre_rs_filter_name_pale">Pale</string>
    <string name="cre_rs_filter_name_pitched">Pitched</string>
    <string name="cre_rs_filter_name_plate">Plate</string>
    <string name="cre_rs_filter_name_pola669">Pola 669</string>
    <string name="cre_rs_filter_name_polasx">Pola SX</string>
    <string name="cre_rs_filter_name_pro400">Pro 400</string>
    <string name="cre_rs_filter_name_quozi">Quozi</string>
    <string name="cre_rs_filter_name_sepiahigh">Sepiahigh</string>
    <string name="cre_rs_filter_name_settled">Settled</string>
    <string name="cre_rs_filter_name_seventies">Seventies</string>
    <string name="cre_rs_filter_name_sin">Sin</string>
    <string name="cre_rs_filter_name_soft">Soft</string>
    <string name="cre_rs_filter_name_steel">Steel</string>
    <string name="cre_rs_filter_name_summer">Summer</string>
    <string name="cre_rs_filter_name_sunset">Sunset</string>
    <string name="cre_rs_filter_name_tender">Tender</string>
    <string name="cre_rs_filter_name_texas">Texas</string>
    <string name="cre_rs_filter_name_twilight">Twilight</string>
    <string name="cre_rs_filter_name_winter">Winter</string>
    <string name="cre_rs_filter_name_x400">X400</string>
    <string name="duwte">Do you want to exit?</string>
    <string name="feedback">SaveToGallery</string>
    <string name="gallery">Gallery</string>
    <string name="hello_world">Hello world!</string>
    <string name="invitefriends">Home</string>
    <string name="no">No</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="permission_message">You would not be able to edit photos without giving access to your devices storage. Do you want to change your settings</string>
    <string name="pick_image_intent_text">Fetching Image</string>
    <string name="pressback">Press BACK again to exit</string>
    <string name="save">Save</string>
    <string name="saving_title">Please Wait...</string>
    <string name="saving_to_sd">Please Wait..its wrking.</string>
    <string name="search_menu_title">Search</string>
    <string name="share">Share</string>
    <string name="toast_cannot_retrieve_cropped_image">Can\'t retrieve Crop image</string>
    <string name="toast_unexpected_error">UnExpected Error</string>
    <string name="yes">YES</string>

</resources>
